# vantage

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
src/: client.rs  crypto.rs  lib.rs  main.rs  network.rs  onion.rs  protocol.rs  server.rs  tui.rs  vault.rs
src/ui/: app.rs  mod.rs  render.rs  theme.rs
src/ui/widgets/: chat.rs  dashboard.rs  help_overlay.rs  mod.rs  operatives.rs  sidebar.rs  status_bar.rs  vault.rs
tests/: integration_test.rs
