[package]
name = "vantage"
version = "3.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
snow = { version = "0.9", features = ["ring-resolver"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rand = "0.8"
rand_chacha = "0.3"
base64 = "0.21"
blake3 = "1.4"
hex = "0.4"
zeroize = { version = "1.6", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.5"
bytes = "1.4"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.26"
crossterm = "0.27"
tui-input = "0.8"
sha2 = "0.10"
bs58 = "0.5" 
unsigned-varint = "0.7" # For Multicodec prefixes
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3.5"
chacha20poly1305 = "0.10"
